--- a/multimedia.html
+++ b/multimedia.html
@@ -69,7 +69,26 @@
             <div class="p-3">
                 <div id="multimedia" class="py-4">
                     <h2 class="text-center  bg-yellow">Multimedia</h2>
-                    <img src="img/logohtmlcss.jpg" alt="" width="100%">
+                    <h3>Galería</h3>
+                    <div class="row">
+                        <div class="col3">
+                            <img src="img/añover1.jpg" alt="Añover1" width="100%">
+                        </div>
+                        <div class="col3">
+                            <img src="img/añover2.jpg" alt="Añover2" width="100%">
+                        </div>
+                        <div class="col3">
+                            <img src="img/añover3.jpg" alt="Añover3" width="100%">
+                        </div>
+                    </div>
+                    <h3>Videos</h3>
+                        <video width="640" height="480" controls>
+                            <source src="multimedia/Video1.mp4" type="video/mp4">
+                        </video>
+                    <h3>Audio</h3>
+                    <audio controls autoplay>
+                        <source src="multimedia/Audio-Izan.mp3" type="audio/mp3">
+                    </audio>
                 </div>
             </div>
 
