--- a/multimedia.html
+++ b/multimedia.html
@@ -86,7 +86,7 @@
                             <source src="multimedia/Video1.mp4" type="video/mp4">
                         </video>
                     <h3>Audio</h3>
-                    <audio controls autoplay>
+                    <audio controls>
                         <source src="multimedia/Audio-Izan.mp3" type="audio/mp3">
                     </audio>
                 </div>
