--- a/multimedia.html
+++ b/multimedia.html
@@ -85,7 +85,7 @@
                         <video width="640" height="480" controls>
                             <source src="multimedia/Video1.mp4" type="video/mp4">
                         </video>
-                        <video width="640" height="480" controls>
+                        <video controls>
                             <source src="multimedia/Bw.mp4" type="video/mp4">
                         </video>
                     <h3>Audio</h3>
