--- a/tablas.html
+++ b/tablas.html
@@ -69,6 +69,163 @@
             <div class="p-3">
                 <div id="tablas" class="py-4">
                     <h2 class="text-center bg-yellow">Tablas</h2>
+                    <h3>Tabla con encabezado de fila:</h3>
+                    <table border="1">
+                        <tr>
+                            <th>File</th>
+                            <th>Edit</th>
+                            <th>Slection</th>
+                            <th>View</th>
+                        </tr>
+                        <tr>
+                            <td>contenido1</td>
+                            <td>contenido2</td>
+                            <td>contenido3</td>
+                            <td>contenter4</td>
+                        </tr>
+                        <tr>
+                            <td>contenido1</td>
+                            <td>contenido2</td>
+                            <td>contenido3</td>
+                            <td>contenido4</td>
+                        </tr>
+                        <tr>
+                            <td>contenido1</td>
+                            <td>contenido2</td>
+                            <td>contenido3</td>
+                            <td>contenido4</td>
+                        </tr>
+                        <tr>
+                            <td>contenido1</td>
+                            <td>contenido2</td>
+                            <td>contenido3</td>
+                            <td>contenido4</td>
+                        </tr>
+                        <tr>
+                            <td>contenido1</td>
+                            <td>contenido2</td>
+                            <td>contenido3</td>
+                            <td>contenido4</td>
+                        </tr>
+                    </table>
+                    <h3>Tabla con encabezado de columna:</h3>
+                    <table border="1">
+                        <tr>
+                            <th>File</th>
+                            <th>Edit</th>
+                            <th>Selection</th>
+                            <th>View</th>
+                        </tr>
+                        <tr>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                    </table>
+                    <h3>Tabla con encabezado de fila y columna:</h3>
+                    <table border="1" class="tablafc">
+                        <tr>
+                            <th>File</th>
+                            <th>Edit</th>
+                            <th>Selection</th>
+                            <th>View</th>
+                        </tr>
+                        <tr>
+                            <th>Go</th>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <th>Run</th>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <th>Terminal</th>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <th>Help</th>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                        <tr>
+                            <th>Window</th>
+                            <td>kk</td>
+                            <td>kk</td>
+                            <td>kk</td>
+                        </tr>
+                    </table>
+                    <h3>Tabla con diseño diferente en filas pares e impares</h3>
+                    <table border="1" class="striped">
+                        <tr>
+                            <td>content1</td>
+                            <td>content2</td>
+                            <td>content3</td>
+                            <td>content4</td>
+                        </tr>
+                        <tr>
+                            <td>content1</td>
+                            <td>content2</td>
+                            <td>content3</td>
+                            <td>content4</td>
+                        </tr>
+                        <tr>
+                            <td>content1</td>
+                            <td>content2</td>
+                            <td>content3</td>
+                            <td>content4</td>
+                        </tr>
+                        <tr>
+                            <td>content1</td>
+                            <td>content2</td>
+                            <td>content3</td>
+                            <td>content4</td>
+                        </tr>
+                        <tr>
+                            <td>content1</td>
+                            <td>content2</td>
+                            <td>content3</td>
+                            <td>content4</td>
+                        </tr>
+                        <tr>
+                            <td>content1</td>
+                            <td>content2</td>
+                            <td>content3</td>
+                            <td>content4</td>
+                        </tr>
+                    </table>
+                    <p></p>
                     <h3>Tabla con encabezado de fila y columna</h3>
                     <table id="horario" border="1">
                         <tr>
