--- a/multimedia.html
+++ b/multimedia.html
@@ -82,16 +82,24 @@
                         </div>
                     </div>
                     <h3>Videos</h3>
-                        <video width="640" height="480" controls>
-                            <source src="multimedia/Video1.mp4" type="video/mp4">
-                        </video>
+                    <div class="row">
+                        <div class="video1">
+                            <video width="1080" controls>
+                                <source src="multimedia/Video1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                    <div class="video2">
                         <video controls>
                             <source src="multimedia/Bw.mp4" type="video/mp4">
                         </video>
-                    <h3>Audio</h3>
-                    <audio controls>
-                        <source src="multimedia/Audio-Izan.mp3" type="audio/mp3">
-                    </audio>
+                    </div>
+                    <div class="audio1">
+                        <h3>Audio</h3>
+                        <audio controls>
+                            <source src="multimedia/Audio-Izan.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
                 </div>
             </div>
 
