--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="p-3">
                 <div id="home" class="py-4">
                     <h2 class="text-center bg-yellow">HOME</h2>
-                    <img src="img/izanbw.jpeg" alt="" width="100% 100px">
+                    <img src="img/izanbw.jpeg" alt="" width="100%">
                 </div>
             </div>
 
